@@ -157,6 +157,7 @@
         <file>res/item_check.png</file>
         <file>res/item_uncheck.png</file>
         <file>res/background.jpg</file>
+        <file>res/clothes.png</file>
     </qresource>
     <qresource prefix="/sys">
         <file>res/sysBtn/close_button.png</file>
