@@ -6,8 +6,9 @@ youker-assistant (2.0.3) vivid; urgency=low
   * Add Gio.Settings notify for Unity and Mate settings.
   * Make interface switching more smoothly.
   * Adjust the layout of interface.
+  * Beautify skin center and menu.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 23 Jun 2015 15:46:45 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 24 Jun 2015 17:58:31 +0800
 
 youker-assistant (2.0.2) vivid; urgency=low
 
